Dynamic URLs before logged

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,15 +1,16 @@
+<!-- !Borrar la contraseña para no iniciar sesión a cada rato -->
 <main class="contenedor contenedor-formularios">
     <h1><%- title %></h1>
 
     <form action="/login" method="POST" class="default-form">
         <div class="campo">
-            <label for="">Correo</label>
-            <input type="text" name="email" placeholder="correo@correo.com">
+            <label>Correo</label>
+            <input value="lesthoward@gmail.com" type="text" name="email" placeholder="correo@correo.com">
         </div>
         <!-- campo -->
         <div class="campo">
-            <label for="">Contraseña</label>
-            <input type="password" name="password" placeholder="Contraseña confidencial">
+            <label>Contraseña</label>
+            <input value="holA123." type="password" name="password" placeholder="Contraseña confidencial">
         </div>
         <!-- campo -->
         <div class="campo enviar">
