--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -10,7 +10,10 @@
     <link href="https://fonts.googleapis.com/css?family=Staatliches:regular" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
     <!-- Styles CSS -->
+    <link rel="stylesheet" href="/css/trix.css">
     <link rel="stylesheet" href="/css/app.css">
+    <!-- Scripts -->
+    <script src="/js/trix-core.js" defer></script>
     <!-- Information -->
     <title><%- title %></title>
 </head>
@@ -21,7 +24,7 @@
         </a>
 
         <nav class="nav">
-            <a href="#">Crear grupo</a>
+            <a href="/group/new">Crear grupo</a>
             <a href="/login">Iniciar sesión</a>
             <a href="/register">Registrarse</a>
        </nav>
