--- a/src/views/management-panel.ejs
+++ b/src/views/management-panel.ejs
@@ -31,16 +31,22 @@
     <div class="seccion-admin">
         <h2>Tus grupos</h2>
         <ul>
-            <li>
-                <div class="informacion-admin">
-                    <h3>BlockChain en San José</h3>
-                </div>
-                <div class="acciones contenedor-botones">
-                    <a href="#" class="btn btn-verde">Editar</a>
-                    <a href="#" class="btn btn-azul2">Imagen</a>
-                    <a href="#" class="btn btn-rojo">Eliminar</a>
-                </div>
-            </li>
+        <% if (groups.length) { %>
+            <% groups.forEach(group => { %>
+                <li>
+                    <div class="informacion-admin">
+                        <h3><%= group.name %> </h3>
+                    </div>
+                    <div class="acciones contenedor-botones">
+                        <a href="/group/edit/<%= group.id %>" class="btn btn-verde">Editar</a>
+                        <a href="/group/edit-image/<%= group.id %>" class="btn btn-azul2">Imagen</a>
+                        <a href="/group/edit/<%= group.id %>" class="btn btn-rojo">Eliminar</a>
+                    </div>
+                </li>
+            <% }) %>
+        <% } else {%>
+            <p>No tienes un grupo creado</p>
+        <% } %> 
         </ul>
     </div>
 </main>
