--- a/src/views/management-panel.ejs
+++ b/src/views/management-panel.ejs
@@ -40,7 +40,7 @@
                     <div class="acciones contenedor-botones">
                         <a href="/group/edit/<%= group.id %>" class="btn btn-verde">Editar</a>
                         <a href="/group/edit-image/<%= group.id %>" class="btn btn-azul2">Imagen</a>
-                        <a href="/group/edit/<%= group.id %>" class="btn btn-rojo">Eliminar</a>
+                        <a href="/group/delete/<%= group.id %>" class="btn btn-rojo">Eliminar</a>
                     </div>
                 </li>
             <% }) %>
