--- a/src/views/management-panel.ejs
+++ b/src/views/management-panel.ejs
@@ -7,6 +7,7 @@
         <a href="/group/new" class="btn btn-amarillo">Crear grupo</a>
         <a href="/meeti/new" class="btn btn-azul">Nuevo Meeti</a>
         <a href="/user/edit" class="btn btn-rosa">Editar perfil</a>
+        <a href="/user/password-changing" class="btn btn-verde">Cambiar contraseña</a>
         <a href="/user/image" class="btn btn-amarillo">Imagen de perfil</a>
     </div>
 
@@ -25,7 +26,6 @@
                         </div>
                         <div class="acciones contenedor-botones">
                             <a href="/meeti/edit/<%= uniqMeeti.id %>" class="btn btn-verde">Editar</a>
-                            <a href="/meeti/edit-image/<%= uniqMeeti.id %>" class="btn btn-azul2">Imagen</a>
                             <a href="/meeti/delete/<%= uniqMeeti.id %>" class="btn btn-rojo">Eliminar</a>
                         </div>
                     </li>
