--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -5,12 +5,12 @@
     <form action="/login" method="POST" class="default-form">
         <div class="campo">
             <label>Correo</label>
-            <input value="lesthoward@gmail.com" type="text" name="email" placeholder="correo@correo.com">
+            <input  type="text" name="email" placeholder="correo@correo.com">
         </div>
         <!-- campo -->
         <div class="campo">
             <label>Contraseña</label>
-            <input value="holA123." type="password" name="password" placeholder="Contraseña confidencial">
+            <input  type="password" name="password" placeholder="Contraseña confidencial">
         </div>
         <!-- campo -->
         <div class="campo enviar">
